# cotrend

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml
clapt/: constants.py  modeling.py  training.py
clapt/clapt_rag/: app.py  generate_vecstore.py  pubmed_cleaner.py
clapt/dataloaders/: datamodels.py  trainingsample_creation.py  validation.py  wikipedia_loading.py
clapt/datapipelining/: __init__.py  batch_collation.py  datamodels.py  decoder_passing.py  initialization.py  padding.py  torch_dataloading.py  trainingsample_creation.py  validation.py  wikipedia_loading.py
clapt/faiss/: eval_set_builder.py  generate_passage_embeddings.py  index.py  passage_retrieval.py  vectorstore.py
data/: README.md
eval/: README.md
slurms/: embed.slurm  train.slurm
src/: modeling.py
