[tool.poetry]
name = "clapt"
version = "0.1.0"
description = ""
authors = ["Arthur <atte.book@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ray = {version = "^2.21.0", extras = ["data"]}
pydantic = "^2.7.1"
torch = "^2.3.0"
lightning = "^2.2.4"
transformers = "^4.40.2"
faiss-gpu = "^1.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
